comprehensive style consistency update: unify all pages to noir terminal aesthetic
- fix broken CSS paths in 2 game files (double_dragon_beatem_up, bills_qb_game)
- convert 5 purple gradient files to noir terminal theme (digital_sisyphus, zach-sleep-letter, zach-errands, cen_veggie_haul, zach_work_schedule)
- convert 2 green theme games to noir palette (snake-retriever, terminal-memory)
- convert 4 custom themed files to noir aesthetic (rat_bushwick, droid-union, pigman, noodle_inventory)
- standardize all 43 pages to use consistent Courier Prime font
- standardize all 43 home links to "← HOME" with proper <a> tags
- add missing CSS links to page-theme.css (10 files)
- unify color palette across all pages: red #ff0000, cyan #00ffff, light blue #7ec8e3, black #0a0a0a

all pages now feature consistent noir terminal aesthetic with page-theme.css as primary stylesheet

--- a/src/anniversary.html
+++ b/src/anniversary.html
@@ -7,6 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../page-theme.css">
     <style>
         * {
             margin: 0;
@@ -627,7 +628,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">HOME</a>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <div class="container">
         <div class="header">
