--- a/src/borscht.html
+++ b/src/borscht.html
@@ -10,9 +10,7 @@
     <link rel="stylesheet" href="../page-theme.css">
 </head>
 <body>
-    <a href="../index.html" class="home-link">
-        <i class="fas fa-arrow-left"></i> Home
-    </a>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <div class="container">
         <header>
