--- a/src/dmv-maze.html
+++ b/src/dmv-maze.html
@@ -302,9 +302,7 @@
     </style>
 </head>
 <body>
-    <nav class="home-link">
-        <a href="../index.html">← Back to Arcade</a>
-    </nav>
+    <a class="home-link" href="../index.html">← HOME</a>
 
     <div class="game-container">
         <div class="game-header">
