--- a/src/droid-union.html
+++ b/src/droid-union.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Droid Union - Worker Rights for All</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../page-theme.css">
     <style>
         * {
             margin: 0;
@@ -13,11 +14,11 @@
         }
 
         :root {
-            --trade-federation-gold: #D4AF37;
+            --trade-federation-gold: #00ffff;
             --droid-silver: #C0C0C0;
-            --empire-red: #DC143C;
-            --rebellion-blue: #4169E1;
-            --dark-space: #0a0e27;
+            --empire-red: #ff0000;
+            --rebellion-blue: #7ec8e3;
+            --dark-space: #0a0a0a;
             --nute-gunray-green: #2d5016;
         }
 
@@ -600,7 +601,7 @@
 
 </head>
 <body>
-    <a href="../index.html" style="position:fixed;top:20px;left:20px;z-index:9999;text-decoration:none;background:rgba(102,126,234,0.9);color:white;padding:10px 20px;border-radius:25px;box-shadow:0 4px 10px rgba(0,0,0,0.2)">← Home</a>
+    <a href="../index.html" style="position:fixed;top:20px;left:20px;z-index:9999;text-decoration:none;background:rgba(102,126,234,0.9);color:white;padding:10px 20px;border-radius:25px;box-shadow:0 4px 10px rgba(0,0,0,0.2)">← HOME</a>
 
     <header>
         <h1>⚙ DROID UNION ⚙</h1>
