--- a/src/pigman.html
+++ b/src/pigman.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pigman (Kaboom.js)</title>
+    <link rel="stylesheet" href="../page-theme.css">
     <style>
         * {
             margin: 0;
@@ -12,8 +13,8 @@
         }
 
         body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #667ee6 0%, #764ba2 100%);
+            font-family: 'Courier Prime', monospace;
+            background: #0a0a0a;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -82,7 +83,7 @@
         }
 
         #game-root canvas {
-            border: 3px solid #667ee6;
+            border: 3px solid #00ff41;
             border-radius: 10px;
             max-width: 100%;
         }
@@ -196,7 +197,7 @@
 </head>
 <body>
     <!-- Home link -->
-    <a href="../index.html" style="position:fixed;top:20px;left:20px;z-index:9999;text-decoration:none;background:rgba(102,126,234,0.9);color:white;padding:10px 20px;border-radius:25px;box-shadow:0 4px 10px rgba(0,0,0,0.2);font-weight:bold;">← Home</a>
+    <a href="../index.html" style="position:fixed;top:20px;left:20px;z-index:9999;text-decoration:none;background:rgba(102,126,234,0.9);color:white;padding:10px 20px;border-radius:25px;box-shadow:0 4px 10px rgba(0,0,0,0.2);font-weight:bold;">← HOME</a>
 
     <div class="game-container">
         <!-- Game header -->
