--- a/src/rubi_infomercial.html
+++ b/src/rubi_infomercial.html
@@ -472,7 +472,7 @@
     <link rel="stylesheet" href="../page-theme.css">
 </head>
 <body>
-    <a href="../index.html" class="home-link">← Home</a>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <div class="container">
         <!-- Header -->
