--- a/src/ai-agency-flier.html
+++ b/src/ai-agency-flier.html
@@ -384,7 +384,7 @@
     <link rel="stylesheet" href="../page-theme.css">
 </head>
 <body>
-    <a href="../index.html" class="home-link">← Home</a>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <header>
         <h1>🤖 AI Agency Flier</h1>
