--- a/src/bills-superbowl-infographic.html
+++ b/src/bills-superbowl-infographic.html
@@ -666,7 +666,7 @@
     <link rel="stylesheet" href="../page-theme.css">
 </head>
 <body>
-    <a href="../index.html" class="home-link">← Home</a>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <div class="container">
         <header>
