--- a/src/bills_qb_game.html
+++ b/src/bills_qb_game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Bills QB Game</title>
-    <link rel="stylesheet" href="page-theme.css">
+    <link rel="stylesheet" href="../page-theme.css">
     <style>
         * {
             box-sizing: border-box;
