--- a/src/frogger.html
+++ b/src/frogger.html
@@ -83,7 +83,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← Home</a>
+    <a href="../index.html" class="home-link">← HOME</a>
     
     <div class="game-container">
         <h1>Frogger</h1>
