--- a/src/letter-to-nancy.html
+++ b/src/letter-to-nancy.html
@@ -286,7 +286,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← Back to Arcade</a>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <div class="controls-panel">
         <button class="control-btn" id="autoRevealBtn">Auto-Reveal Letter</button>
