--- a/src/snake-retriever.html
+++ b/src/snake-retriever.html
@@ -28,7 +28,7 @@
 
         h1 {
             font-size: 3.5em;
-            text-shadow: 0 0 10px #00ff41, 0 0 20px #00ff41;
+            text-shadow: 0 0 10px #7ec8e3, 0 0 20px #7ec8e3;
             margin-bottom: 10px;
             letter-spacing: 4px;
             animation: glitch 3s infinite;
@@ -50,8 +50,8 @@
         }
 
         .stat-box {
-            background: rgba(0, 255, 65, 0.1);
-            border: 2px solid #00ff41;
+            background: rgba(126, 200, 227, 0.1);
+            border: 2px solid #7ec8e3;
             padding: 10px 25px;
             border-radius: 5px;
             min-width: 120px;
@@ -65,15 +65,15 @@
 
         .stat-value {
             font-size: 1.8em;
-            color: #00ff41;
-            text-shadow: 0 0 10px #00ff41;
+            color: #7ec8e3;
+            text-shadow: 0 0 10px #7ec8e3;
             font-weight: bold;
         }
 
         .canvas-container {
-            border: 3px solid #00ff41;
+            border: 3px solid #7ec8e3;
             background: #1a1a1a;
-            box-shadow: 0 0 30px rgba(0, 255, 65, 0.5);
+            box-shadow: 0 0 30px rgba(126, 200, 227, 0.5);
             border-radius: 5px;
             padding: 10px;
             max-width: 600px;
@@ -84,7 +84,7 @@
         canvas {
             display: block;
             background: #222;
-            border: 1px solid #00ff41;
+            border: 1px solid #7ec8e3;
             width: 100%;
             height: auto;
         }
@@ -101,20 +101,20 @@
             font-family: 'Courier Prime', monospace;
             font-size: 0.95em;
             padding: 8px 20px;
-            background: rgba(0, 255, 65, 0.2);
-            border: 2px solid #00ff41;
-            color: #00ff41;
+            background: rgba(126, 200, 227, 0.2);
+            border: 2px solid #7ec8e3;
+            color: #7ec8e3;
             cursor: pointer;
             border-radius: 5px;
             transition: all 0.3s;
-            text-shadow: 0 0 5px #00ff41;
+            text-shadow: 0 0 5px #7ec8e3;
             touch-action: manipulation;
             min-height: 44px;
         }
 
         .btn:hover {
-            background: rgba(0, 255, 65, 0.3);
-            box-shadow: 0 0 20px rgba(0, 255, 65, 0.7);
+            background: rgba(126, 200, 227, 0.3);
+            box-shadow: 0 0 20px rgba(126, 200, 227, 0.7);
         }
 
         .btn:active {
@@ -348,7 +348,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">HOME</a>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <div class="container">
         <h1>🧪 LAB ESCAPE 🧬</h1>
