--- a/src/space-invaders.html
+++ b/src/space-invaders.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Invaders</title>
+    <link rel="stylesheet" href="../page-theme.css">
     <style>
         * {
             margin: 0;
@@ -217,7 +218,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" style="position:fixed;top:20px;left:20px;z-index:9999;text-decoration:none;background:#000;color:#0f0;padding:10px 20px;border-radius:25px;border:2px solid #0f0;font-weight:bold;font-family:monospace;">← Home</a>
+    <a href="../index.html" style="position:fixed;top:20px;left:20px;z-index:9999;text-decoration:none;background:#000;color:#0f0;padding:10px 20px;border-radius:25px;border:2px solid #0f0;font-weight:bold;font-family:monospace;">← HOME</a>
 
     <div class="game-container">
         <div class="game-header">
