--- a/src/subway_sub_ratio.html
+++ b/src/subway_sub_ratio.html
@@ -105,9 +105,7 @@
     </style>
 </head>
 <body>
-    <div class="home-link">
-        <a href="../index.html">← back</a>
-    </div>
+    <a class="home-link" href="../index.html">← HOME</a>
 
     <div class="container">
         <div class="header">
