--- a/src/sudoku.html
+++ b/src/sudoku.html
@@ -157,7 +157,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← Home</a>
+    <a href="../index.html" class="home-link">← HOME</a>
     
     <div class="game-container">
         <h1>Sudoku</h1>
