--- a/src/terminal-memory.html
+++ b/src/terminal-memory.html
@@ -30,7 +30,7 @@
 
         h1 {
             font-size: 3.5em;
-            text-shadow: 0 0 10px #00ff41, 0 0 20px #00ff41;
+            text-shadow: 0 0 10px #7ec8e3, 0 0 20px #7ec8e3;
             margin-bottom: 10px;
             letter-spacing: 4px;
         }
@@ -50,8 +50,8 @@
         }
 
         .stat-box {
-            background: rgba(0, 255, 65, 0.1);
-            border: 2px solid #00ff41;
+            background: rgba(126, 200, 227, 0.1);
+            border: 2px solid #7ec8e3;
             padding: 15px 30px;
             border-radius: 5px;
             min-width: 150px;
@@ -66,8 +66,8 @@
 
         .stat-value {
             font-size: 2em;
-            color: #00ff41;
-            text-shadow: 0 0 10px #00ff41;
+            color: #7ec8e3;
+            text-shadow: 0 0 10px #7ec8e3;
             font-weight: bold;
         }
 
@@ -85,7 +85,7 @@
         .card {
             aspect-ratio: 1;
             cursor: pointer;
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
             background: rgba(0, 10, 0, 0.8);
             display: flex;
             align-items: center;
@@ -99,8 +99,8 @@
         }
 
         .card:hover:not(.matched):not(.flipped) {
-            background: rgba(0, 255, 65, 0.1);
-            box-shadow: 0 0 15px rgba(0, 255, 65, 0.5);
+            background: rgba(126, 200, 227, 0.1);
+            box-shadow: 0 0 15px rgba(126, 200, 227, 0.5);
         }
 
         .card.flipped {
@@ -110,15 +110,15 @@
 
         .card.matched {
             background: rgba(0, 100, 0, 0.9);
-            border-color: #00ff41;
+            border-color: #7ec8e3;
             cursor: default;
             animation: matchPulse 0.6s ease-out;
         }
 
         .card-back {
             font-size: 3em;
-            color: #00ff41;
-            text-shadow: 0 0 10px #00ff41;
+            color: #7ec8e3;
+            text-shadow: 0 0 10px #7ec8e3;
         }
 
         .card-front {
@@ -132,8 +132,8 @@
         }
 
         .card.command .card-front {
-            color: #00ff41;
-            text-shadow: 0 0 5px #00ff41;
+            color: #7ec8e3;
+            text-shadow: 0 0 5px #7ec8e3;
             font-size: 1.8em;
             font-weight: bold;
         }
@@ -157,20 +157,20 @@
             font-family: 'Courier Prime', monospace;
             font-size: 1.5em;
             padding: 15px 40px;
-            background: rgba(0, 255, 65, 0.2);
-            border: 2px solid #00ff41;
-            color: #00ff41;
+            background: rgba(126, 200, 227, 0.2);
+            border: 2px solid #7ec8e3;
+            color: #7ec8e3;
             cursor: pointer;
             border-radius: 5px;
             transition: all 0.3s;
-            text-shadow: 0 0 5px #00ff41;
+            text-shadow: 0 0 5px #7ec8e3;
             touch-action: manipulation;
             min-height: 44px;
         }
 
         .btn:hover {
-            background: rgba(0, 255, 65, 0.3);
-            box-shadow: 0 0 20px rgba(0, 255, 65, 0.7);
+            background: rgba(126, 200, 227, 0.3);
+            box-shadow: 0 0 20px rgba(126, 200, 227, 0.7);
         }
 
         .btn:active {
@@ -186,7 +186,7 @@
         }
 
         .message.success {
-            color: #00ff41;
+            color: #7ec8e3;
         }
 
         .message.error {
@@ -213,18 +213,18 @@
 
         .victory-content {
             background: rgba(0, 10, 0, 0.95);
-            border: 3px solid #00ff41;
+            border: 3px solid #7ec8e3;
             border-radius: 10px;
             padding: 50px;
             text-align: center;
-            box-shadow: 0 0 50px rgba(0, 255, 65, 0.8);
+            box-shadow: 0 0 50px rgba(126, 200, 227, 0.8);
             max-width: 90%;
         }
 
         .victory-title {
             font-size: 3em;
-            color: #00ff41;
-            text-shadow: 0 0 20px #00ff41;
+            color: #7ec8e3;
+            text-shadow: 0 0 20px #7ec8e3;
             margin-bottom: 20px;
         }
 
@@ -248,7 +248,7 @@
 
         @keyframes matchPulse {
             0% { transform: scale(1); }
-            50% { transform: scale(1.1); box-shadow: 0 0 30px rgba(0, 255, 65, 1); }
+            50% { transform: scale(1.1); box-shadow: 0 0 30px rgba(126, 200, 227, 1); }
             100% { transform: scale(1); }
         }
 
@@ -347,7 +347,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">HOME</a>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <div class="container">
         <header>
